SCRUM-390: a hack to prevent horizontal scrollbar from showing up.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@49467 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
@@ -2,7 +2,7 @@
     position: absolute;
     z-index: 900;
     top: 0pt;
-    left: 0pt;
+    right: 0pt;
     margin: 0pt;
 }
 
